src/test/deca/context/invalid/class/calls/absent_class2.deca
// Description:
//    Appel d'une méthode d'un objet de non classe
//
// Resultats:
//    undefined class

{
	int a;
	int c = a.b();
}

